# anis-kwon-2025-repro

./: .gitignore  MANIFEST.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: reproduce_2015_2020.yaml  reproduce_2015_2021.yaml  smoke.yaml
configs/sdp_diagnostics/: paper50.yaml  smoke.yaml
data/: factors_daily.csv  prices.csv
data/smoke/: factors_daily.csv  prices.csv
docs/: COMPUTE_REQUEST.md  DATA_REQUEST.md  REPRODUCTION_NOTES.md  RESULTS_SUMMARY_2015_2020.md  SDP_DIAGNOSTICS_INTEGRATION.md  SDP_DIAGNOSTICS_RESULTS_2026-05-14.md  VISUAL_REPORT_2015_2020.md  WORKLOG.md  metrics_summary_2015_2020.csv  wealth_index_2015_2020.csv
docs/sdp_diagnostics_results/: gradient_alignment_summary.csv  relaxation_quality_summary.csv  sdp_scs_diagnostic_summary.csv  ste_integer_forward_k10.csv  ste_integer_forward_summary.csv  train_eval_sweep_final_rows.csv  train_eval_sweep_summary.csv  train_eval_top_rows.csv
docs/sdp_relaxation_diagnostics/: COMPUTE_REQUEST_CN.md  DATA_REQUEST_CN.md  EXPERIMENT_DESIGN_CN.md  README_CN.md
scripts/: check_data.py  download_ff_factors.py  run_reproduction.py  run_smoke_test.py  slurm_run_array.sh
scripts/sdp_diagnostics/: aggregate_results.py  make_synthetic_data.py  run_gradient_alignment.py  run_relaxation_quality.py  run_ste_integer_forward.py  run_train_eval_sweep.py  validate_data.py
src/e2e_cardinality_portfolio/: __init__.py  backtest.py  bootstrap.py  config.py  constants.py  data.py  factor_model.py  layers.py  metrics.py  optimization.py  train.py  utils.py
tests/: test_metrics_and_bootstrap.py
(+14 files in other folders)
